test/compile_errors/err_keyword_as_var_async.w
//! expect-check-fail: expected identifier
let async = 42
fn main:
    let x = 1
